Fix: removed scrollbars SB & Offices cards

--- a/frontend/css/about.css
+++ b/frontend/css/about.css
@@ -1350,7 +1350,7 @@ main {
 .spotlight-card-inner {
     width: 100%;
     flex-grow: 1;
-    overflow-y: auto;
+    overflow-y: scroll;
     background: rgba(255, 255, 255, 0.65);
     border: 1px solid rgba(255, 255, 255, 0.9);
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.06);
@@ -1363,6 +1363,12 @@ main {
     text-align: right;
     margin-top: 20px;
 }
+
+
+.spotlight-card-inner{
+        scrollbar-width: none;
+    }
+
 
 .spotlight-icon-wrapper {
     margin-bottom: 20px;
